# eot2024

./: .gitignore  README.md  pyproject.toml
.github/workflows/: clean_lists.yml
cleaner/: README.md  __init__.py  __main__.py  config.py  domains.py  file_io.py  importer.py  purge_ignores.py  update_ignore.py  urls.py  xlsx_handler.py
config/: main.yml
output/: domains.csv  ignore_domains.csv
seed-lists/:  Federal URLs linked to on EnergyFundsForAll.org.xlsx  117th_House_Seeds.xlsx  117th_Senate_Seeds.xlsx  118th_House_Seed_List.xlsx  118th_Senate.xlsx  2_govt_urls_federal_only.csv  ARPA-H.xlsx  ATF-20250224.xlsx  AUTO_CISA_current_federal.txt  AUTO_CISA_gov_zone_file.txt  AWI farmed team URL nominations.xlsx  AWI-USDA-FSIS-20241222.xlsx  AWI-XL-4-20241224.xlsx  AWI-bulk-list-5-20250114.xlsx  BLM 2020-2024.xlsx  CDC html URLs from sitemap data - 20241201.csv  CRS_ReportsList.csv  DEI_FAA-20240201.xlsx  DNI and CFPB.xlsx  DOD PDF-20250314.xlsx  DOD_photos_20250310.xlsx  DOJ, White_House, DEA, ATF, FBI.xlsx  Dept of Commerce 2020-.xlsx  Dept of Energy 2020-Present.xlsx  Diversity-DEI-20250119.xlsx  EDGI EoT Bulk List 2025-01-16.csv  EDGI-partner-seeds-20241222.xlsx  EPA 2024-PDF-20250201.xlsx  EPA 2024.xlsx  EoT archive submission - DoW 12-19-24.txt  FCMS-20250317.xlsx  FDA_letters_releases_approvals.xlsx  FDLP_WEb_Archiveseed_list_20240212.csv  FOIA_Libraries_Dataset_Oct_3_2023_Final.xlsx  Federal-Executive-Institute-20250213.xlsx  GAO-hermann-wu-20241218.xlsx  GENDER_ID-20250201.xlsx  GlobalChangeGov.xlsx  Gov_Sitemaps.csv  HCWH-EOT-seeds-full.xlsx  (+74 more)
(+2352 files in other folders)
